# pymnn

./: CMakeLists.txt  README.md
data/: nanodet_cpp.mnn
src/: pymnn.cpp  test.py
